# rust_engine

./: .gitignore  Cargo.toml  Cargo.toml.bak
assets/shaders/: sprite.wgsl
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: Ex_hot_reload.txt  app.rs  engine_loop.rs  gui.rs  host.rs  hot_reload.rs  inp.txt  inspector.rs  lib.rs  platform_runner.rs  plugin_manager.rs  renderer.rs  scene.rs
crates/engine_core/src/input/: arbiter.rs  config.rs  ffi.rs  map.rs  mod.rs  poller.rs  registry.rs
crates/engine_core/src/renderer/: context.rs  frame_graph.rs  mod.rs  resources.rs  sprite_pass.rs  types.rs
crates/engine_core/src/renderer_x/: camera.txt  extractor.txt  gui.rs  instance.txt  mod.txt  pipeline.rs
crates/engine_ecs/: Cargo.toml
crates/engine_ecs/src/: entity.rs  lib.rs  storage.rs  world.rs
crates/engine_physics/: Cargo.toml
crates/engine_shared/: Cargo.toml
crates/engine_shared/src/: components.rs  input_types.rs  lib.rs  plugin_api.rs
crates/game_plugin/: Cargo.toml
crates/game_plugin/src/: lib.rs  shims.rs  state.rs
crates/game_plugin/src/systems/: camera.rs  enemy.rs  mod.rs  player.rs
