[package]
name = "game_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
engine_shared = { path = "../engine_shared" }
engine_ecs = { path = "../engine_ecs" } # <--- Needed to access World
glam = { version = "0.25", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"